// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClayCheckbox should render a checkbox with classes 1`] = `
<div class="custom-control custom-checkbox my-custom-class">
  <input class="custom-control-input" ref="input" type="checkbox">
  <label class="custom-control-label">
    <span class="custom-control-label-text">My Checkbox</span>
  </label>
</div>
`;

exports[`ClayCheckbox should render a checkbox with custom label content 1`] = `
<div class="custom-control custom-checkbox">
  <input class="custom-control-input" ref="input" type="checkbox">
  <label class="custom-control-label">
    <div>
      <h4>My Checkbox</h4>
    </div>
  </label>
</div>
`;

exports[`ClayCheckbox should render a checkbox with hidden label 1`] = `
<div class="custom-control custom-checkbox">
  <input class="custom-control-input" ref="input" type="checkbox">
  <label class="custom-control-label">
    <span class="custom-control-label-text sr-only">My Checkbox</span>
  </label>
</div>
`;

exports[`ClayCheckbox should render a checkbox with id 1`] = `
<div class="custom-control custom-checkbox" id="myId">
  <input class="custom-control-input" ref="input" type="checkbox">
  <label class="custom-control-label">
    <span class="custom-control-label-text">My Checkbox</span>
  </label>
</div>
`;

exports[`ClayCheckbox should render a checkbox with name 1`] = `
<div class="custom-control custom-checkbox">
  <input class="custom-control-input" name="myCheckbox" ref="input" type="checkbox">
  <label class="custom-control-label">
    <span class="custom-control-label-text">My Checkbox</span>
  </label>
</div>
`;

exports[`ClayCheckbox should render a checkbox with value 1`] = `
<div class="custom-control custom-checkbox">
  <input class="custom-control-input" value="mycheckbox" ref="input" type="checkbox">
  <label class="custom-control-label">
    <span class="custom-control-label-text">My Checkbox</span>
  </label>
</div>
`;

exports[`ClayCheckbox should render a checked and disabled checkbox 1`] = `
<div class="custom-control custom-checkbox">
  <input checked="" disabled="disabled" class="custom-control-input" ref="input" type="checkbox">
  <label class="custom-control-label">
    <span class="custom-control-label-text">My Checkbox</span>
  </label>
</div>
`;

exports[`ClayCheckbox should render a checked checkbox 1`] = `
<div class="custom-control custom-checkbox">
  <input checked="" class="custom-control-input" ref="input" type="checkbox">
  <label class="custom-control-label">
    <span class="custom-control-label-text">My Checkbox</span>
  </label>
</div>
`;

exports[`ClayCheckbox should render a disabled checkbox 1`] = `
<div class="custom-control custom-checkbox">
  <input disabled="disabled" class="custom-control-input" ref="input" type="checkbox">
  <label class="custom-control-label">
    <span class="custom-control-label-text">My Checkbox</span>
  </label>
</div>
`;

exports[`ClayCheckbox should render an indeterminate checkbox 1`] = `
<div class="custom-control custom-checkbox">
  <input checked="" class="custom-control-input" ref="input" type="checkbox">
  <label class="custom-control-label">
    <span class="custom-control-label-text">My Checkbox</span>
  </label>
</div>
`;

exports[`ClayCheckbox should render an inline checkbox 1`] = `
<div class="custom-control custom-checkbox custom-control-inline">
  <input class="custom-control-input" ref="input" type="checkbox">
  <label class="custom-control-label">
    <span class="custom-control-label-text">My Checkbox</span>
  </label>
</div>
`;

exports[`ClayCheckbox should render an inline checkbox with classes 1`] = `
<div class="custom-control custom-checkbox custom-control-inline my-custom-class">
  <input class="custom-control-input" ref="input" type="checkbox">
  <label class="custom-control-label">
    <span class="custom-control-label-text">My Checkbox</span>
  </label>
</div>
`;

exports[`ClayCheckbox should render an inline checkbox with custom id 1`] = `
<div class="custom-control custom-checkbox custom-control-inline" id="myCheckbox">
  <input class="custom-control-input" ref="input" type="checkbox">
  <label class="custom-control-label">
    <span class="custom-control-label-text">My Checkbox</span>
  </label>
</div>
`;

exports[`ClayCheckbox should render default markup 1`] = `
<div class="custom-control custom-checkbox">
  <input class="custom-control-input" ref="input" type="checkbox">
  <label class="custom-control-label">
    <span class="custom-control-label-text">My Checkbox</span>
  </label>
</div>
`;
